--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,4 @@
-@import "./setup/_mixins.scss";
+//@import "./setup/_mixins.scss";
 
 @import "./setup/_normalize.scss";
 @import "./basics/_base.scss";
@@ -9,4 +9,4 @@
 @import "./views/_footer.scss";
 
 @import "./views/_top.scss";
-@import "./views/_contact.scss";
+//@import "./views/_contact.scss";
